# sql_ast_benchmark

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  gretel_delete.txt  gretel_insert.txt  gretel_select.txt  gretel_update.txt  spider_select.txt  sqlparser-create-user-terminator-bug.md  tarpaulin.toml
.cargo/: audit.toml  config.toml
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: contentious-construct.yml  not-contentious.yml  should-be-rejected.yml
.github/workflows/: audit.yml  ci.yml  pages.yml
badgegen/: Cargo.toml
badgegen/src/: main.rs
benches/: batch_parsing.rs  parsing.rs
contentious/: duplicate-target-columns.toml  sqlite-nonstandard-alter.toml  tcl-variables.toml
featurescan/: Cargo.toml
featurescan/data/: depth.json  featurescan.json
featurescan/src/: depth.rs  lints.rs  main.rs  scan.rs
membench/: Cargo.toml
membench/src/: main.rs
oracle/: Cargo.toml
oracle/labels/: clickhouse.tsv.zst  duckdb.tsv.zst  mysql.tsv.zst  postgresql.tsv.zst  sqlite.tsv.zst  tsql.tsv.zst
oracle/src/: main.rs
src/: batch.rs  bench_dist.rs  contentious.rs  datasets.rs  export.rs  lib.rs  mem.rs  oracle_cache.rs  plot.rs  report.rs  stats.rs
timemachine/: Cargo.toml
timemachine/src/: lib.rs  registry.rs  run.rs
timemachine/src/families/: databend.rs  orql.rs  polyglot.rs  qusql.rs  sqlglot.rs  sqlite3.rs  sqlparser.rs  turso.rs
viz/: Cargo.toml
viz/src/: badge.rs  chart.rs  color.rs  lib.rs  marker.rs  schema.rs
web/: Cargo.toml  Dioxus.toml  index.html
web/assets/: bench.json  bench.json.zst  history.json.zst  main.css
web/src/: badges.rs  brand.rs  cadence.rs  components.rs  data.rs  descriptions.rs  dialect_meta.rs  lib.rs  logos.rs  main.rs  metadata.rs  score.rs
web/static/: robots.txt  sitemap.xml
web/static/failures/: bigquery__polyglot_sql.tsv.zst  bigquery__sqlglot_rust.tsv.zst  bigquery__sqlparser_rs.tsv.zst  clickhouse__polyglot_sql.tsv.zst  clickhouse__sqlglot_rust.tsv.zst  clickhouse__sqlparser_rs.tsv.zst  duckdb__polyglot_sql.tsv.zst  duckdb__sqlglot_rust.tsv.zst  duckdb__sqlparser_rs.tsv.zst  hive__databend_common_ast.tsv.zst  hive__polyglot_sql.tsv.zst  hive__sqlglot_rust.tsv.zst  hive__sqlparser_rs.tsv.zst  multi__polyglot_sql.tsv.zst  multi__sqlglot_rust.tsv.zst  multi__sqlparser_rs.tsv.zst  mysql__databend_common_ast.tsv.zst  mysql__polyglot_sql.tsv.zst  mysql__qusql_parse.tsv.zst  mysql__sqlglot_rust.tsv.zst  mysql__sqlparser_rs.tsv.zst  oracle__orql.tsv.zst  oracle__polyglot_sql.tsv.zst  oracle__sqlglot_rust.tsv.zst  oracle__sqlparser_rs.tsv.zst  postgresql__databend_common_ast.tsv.zst  postgresql__pg_query__summary_.tsv.zst  postgresql__pg_query_rs.tsv.zst  postgresql__polyglot_sql.tsv.zst  postgresql__qusql_parse.tsv.zst  postgresql__sqlglot_rust.tsv.zst  postgresql__sqlparser_rs.tsv.zst  redshift__polyglot_sql.tsv.zst  redshift__sqlglot_rust.tsv.zst  redshift__sqlparser_rs.tsv.zst  spark_sql__polyglot_sql.tsv.zst  spark_sql__sqlglot_rust.tsv.zst  spark_sql__sqlparser_rs.tsv.zst  sqlite__polyglot_sql.tsv.zst  sqlite__qusql_parse.tsv.zst  (+10 more)
