[workspace]
members = [".", "viz", "web", "membench", "oracle", "timemachine", "featurescan"]
default-members = ["."]
resolver = "2"

[package]
name = "sql_ast_benchmark"
version = "0.1.0"
edition = "2021"
description = "Benchmarking Rust SQL parsers using real-world PostgreSQL statements"
repository = "https://github.com/LucaCappelletti94/sql_ast_benchmark"
license = "MIT"
authors = ["Luca Cappelletti"]
keywords = ["sql", "parser", "benchmark", "postgresql"]
categories = ["development-tools::profiling"]
publish = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cast_possible_truncation = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }

[dependencies]
sqlparser = { git = "https://github.com/sqlparser-rs/sqlparser-rs" }
# libpg_query, the PostgreSQL server's own parser, the reference for PostgreSQL.
pg_query = { git = "https://github.com/pganalyze/pg_query.rs" }
qusql-parse = "0.8.0"
polyglot-sql = { git = "https://github.com/tobilg/polyglot" }
databend-common-ast = "0.2.5"
orql = { git = "https://codeberg.org/xitep/orql" }
sqlglot-rust = "0.10.0"
sqlite3-parser = "0.16.0"
turso_parser = "0.6.1"
fallible-iterator = "0.3.0"
viz = { path = "viz" }
serde_json = "1"
# Compress the per-(dialect, parser) rejected-statement TSV downloads.
zstd = "0.13"
# Pre-render the failing-statement previews to static highlighted HTML at export
# time, so the web viewer ships no runtime syntax highlighter. `default-fancy`
# uses the pure-Rust regex engine, avoiding the oniguruma C dependency.
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "batch_parsing"
harness = false

[[bin]]
name = "sqlbench"
path = "src/bin/sqlbench.rs"

# Strip only DWARF debug info from release builds. The WASM viewer is built with
# `dx build --web --release`; rustc's DWARF tripped wasm-opt ("unsupported
# version of DWARF"), so removing it lets wasm-opt succeed and shrinks the wasm.
# Stripping debuginfo only (not symbols) keeps the wasm `name` custom section
# valid, avoiding the browser's "bad name subsection length" validation warning.
[profile.release]
strip = "debuginfo"

