[package]
name = "timemachine"
version = "0.1.0"
edition = "2021"
description = "Per-version (time-machine) benchmark runners for sql_ast_benchmark"
license = "MIT"
publish = false

# Hosts several semver-incompatible versions of each pure-Rust parser at once via
# `package`-rename aliases, so one binary can benchmark a library across releases.
# The memory runner installs a counting global allocator, so unsafe is allowed
# here (unlike the main crate).

[dependencies]
sql_ast_benchmark = { path = ".." }
viz = { path = "../viz" }
serde_json = "1"
# Compress the combined history so it can be embedded in the wasm viewer (which
# decompresses it with a pure-Rust decoder), keeping the site fetch-free.
zstd = "0.13"

# sqlparser-rs milestones. Each rename pins one release; cargo keeps them side by
# side because different 0.x minors are semver-incompatible.
sqlparser_v0_40 = { package = "sqlparser", version = "=0.40.0" }
sqlparser_v0_45 = { package = "sqlparser", version = "=0.45.0" }
sqlparser_v0_50 = { package = "sqlparser", version = "=0.50.0" }
sqlparser_v0_55 = { package = "sqlparser", version = "=0.55.0" }
sqlparser_v0_62 = { package = "sqlparser", version = "=0.62.0" }

# sqlglot-rust minors (0.9 and 0.10 are the two semver-incompatible groups).
sqlglot_v0_9 = { package = "sqlglot-rust", version = "=0.9.37" }
sqlglot_v0_10 = { package = "sqlglot-rust", version = "=0.10.0" }

# polyglot-sql minors.
polyglot_v0_1 = { package = "polyglot-sql", version = "=0.1.7" }
polyglot_v0_3 = { package = "polyglot-sql", version = "=0.3.11" }
polyglot_v0_4 = { package = "polyglot-sql", version = "=0.4.4" }

# databend-common-ast minors (single-statement parser; 0.0.x is pre-stable).
databend_v0_1 = { package = "databend-common-ast", version = "=0.1.3" }
databend_v0_2 = { package = "databend-common-ast", version = "=0.2.5" }

# sqlite3-parser (lemon-rs) minors that share the fallible_iterator 0.3 API.
sqlite3_v0_13 = { package = "sqlite3-parser", version = "=0.13.0" }
sqlite3_v0_14 = { package = "sqlite3-parser", version = "=0.14.0" }
sqlite3_v0_15 = { package = "sqlite3-parser", version = "=0.15.0" }
sqlite3_v0_16 = { package = "sqlite3-parser", version = "=0.16.0" }
fallible-iterator = "0.3.0"

# qusql-parse minors.
qusql_v0_4 = { package = "qusql-parse", version = "=0.4.0" }
qusql_v0_5 = { package = "qusql-parse", version = "=0.5.0" }
qusql_v0_6 = { package = "qusql-parse", version = "=0.6.0" }
qusql_v0_7 = { package = "qusql-parse", version = "=0.7.0" }
qusql_v0_8 = { package = "qusql-parse", version = "=0.8.0" }

# turso_parser and orql each have a single published release (one trend point).
turso_v0_6 = { package = "turso_parser", version = "=0.6.1" }
orql_v0_1 = { package = "orql", version = "=0.1.0" }

[[bin]]
name = "timemachine"
path = "src/bin/timemachine.rs"

[[bin]]
name = "timemachine-mem"
path = "src/bin/timemachine_mem.rs"
