[package]
name = "sql_ast_benchmark_web"
version = "0.1.0"
edition = "2021"
description = "Interactive viewer for the sql_ast_benchmark results"
license = "MIT"
publish = false

# rsx! triggers some pedantic/nursery lints; keep the web crate on the default set.
[lints.clippy]
all = "warn"

[dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
dioxus-free-icons = { version = "0.10", features = ["font-awesome-solid", "font-awesome-brands"] }
viz = { path = "../viz" }
serde_json = "1"
# Pure-Rust zstd decoder so the embedded time-machine history decompresses in
# wasm with no native dependency and no runtime fetch.
ruzstd = "0.7"
